# rDpi

./: .gitignore  Cargo.toml  README.md
benches/: bench_detect.rs
docs/: issue#0003.html  issue#0004.html  issue#0005.html  issue#0010.html  issue#0011.html  issue#0012.html  issue#0013.html  issue#0014.html  issue#0015.html  issue#0016.html  issue#0017.html  issue#0022.html
docs/prd/: PRD-Phase10-Risk-Analysis-Engine.md  PRD-Phase11-Classification-Expansion.md
docs/spec/: SPEC-Phase10-Risk-Analysis-Engine.md  SPEC-Phase11-Classification-Expansion.md
examples/: basic.rs  metadata.rs  pcap.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_detect.rs
src/: error.rs  lib.rs  pcap.rs
src/application/: ja4.rs  mappings.rs  mod.rs  trie.rs
src/asn1/: ber.rs  mod.rs  oid.rs  types.rs
src/core/: flow.rs  mod.rs  stats.rs  types.rs
src/core/guess/: domain.rs  info.rs  ip.rs  mod.rs  port.rs
src/parser/: ethernet.rs  ip.rs  mod.rs  tcp.rs  udp.rs
src/protocols/: dns.rs  mod.rs
src/protocols/bgp/: detector.rs  mod.rs  parser.rs
src/protocols/dhcp/: mod.rs  parser.rs
src/protocols/dhcpv6/: detector.rs  mod.rs  parser.rs
src/protocols/dns/: detector.rs  mod.rs  parser.rs
src/protocols/ftp/: detector.rs  mod.rs  parser.rs
src/protocols/h323/: detector.rs  mod.rs  parser.rs
src/protocols/http/: detector.rs  mod.rs  parser.rs
src/protocols/http2/: detector.rs  mod.rs  parser.rs
src/protocols/ike/: detector.rs  mod.rs  parser.rs
src/protocols/imap/: detector.rs  mod.rs  parser.rs
src/protocols/kerberos/: detector.rs  mod.rs  parser.rs
src/protocols/l2tp/: detector.rs  mod.rs  parser.rs
src/protocols/ldap/: detector.rs  mod.rs  parser.rs
src/protocols/mgcp/: detector.rs  mod.rs  parser.rs
src/protocols/modbus/: mod.rs  parser.rs
src/protocols/mongodb/: detector.rs  mod.rs  parser.rs
src/protocols/mqtt/: detector.rs  mod.rs  parser.rs
src/protocols/mysql/: detector.rs  mod.rs  parser.rs
src/protocols/netflow/: detector.rs  mod.rs  parser.rs
src/protocols/nfs/: detector.rs  mod.rs  parser.rs
src/protocols/ntp/: mod.rs  parser.rs
src/protocols/openvpn/: detector.rs  mod.rs  parser.rs
src/protocols/pop3/: detector.rs  mod.rs  parser.rs
src/protocols/postgresql/: detector.rs  mod.rs  parser.rs
src/protocols/pptp/: detector.rs  mod.rs  parser.rs
src/protocols/ptpv2/: detector.rs  mod.rs  parser.rs
src/protocols/quic/: mod.rs  parser.rs
src/risk/: mod.rs  types.rs
src/rule/: mod.rs  parser.rs
tests/: integration_test.rs  test_dns.rs  test_flow.rs  test_ftp.rs  test_guess.rs  test_http.rs  test_integration.rs  test_ja4.rs  test_parser.rs  test_quic.rs  test_regression.rs  test_rtp.rs  test_rule.rs  test_sip.rs  test_smtp.rs  test_ssh.rs  test_tls.rs  test_types.rs
(+70 files in other folders)
