[package]
name = "rdpi"
version = "0.1.1"
edition = "2024"
description = "Rust Deep Packet Inspection library"
license = "MIT"
repository = "https://github.com/yourname/rdpi"
keywords = ["dpi", "packet", "network", "protocol", "detection"]

[dependencies]
etherparse = "0.15"
thiserror = "1.0"
aho-corasick = "1.1"
rustls = "0.23"
pcap-file = { version = "2.0", optional = true }

[features]
default = ["dns", "http", "tls"]
dns = []
http = []
tls = []
ssh = []
smtp = []
quic = []
mail = []
infra = []
snmp = []
modbus = []
database = []
pcap = ["dep:pcap-file"]
proto3 = []    # FTP, SIP, RTP/RTCP

[dev-dependencies]
