[package]
name = "rdpi"
version = "0.4.0"
edition = "2024"
description = "Rust Deep Packet Inspection library"
license = "MIT"
repository = "https://github.com/yourname/rdpi"
keywords = ["dpi", "packet", "network", "protocol", "detection"]

[dependencies]
etherparse = "0.15"
thiserror = "1.0"
aho-corasick = "1.1"
rustls = "0.23"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
pcap-file = { version = "2.0", optional = true }
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"

[features]
default = ["dns", "http", "tls"]
dns = []
http = []
tls = []
ssh = []
smtp = []
quic = []
mail = []
infra = []
snmp = []
modbus = []
database = []
pcap = ["dep:pcap-file"]
rule = ["serde", "serde_json"]
proto3 = []    # FTP, SIP, RTP/RTCP
iot = []       # MQTT
vpn = []       # WireGuard, OpenVPN
voip = []      # STUN
auth = []      # Kerberos, LDAP
remote = []    # RDP
risk = ["serde", "serde_json"]
storage = []   # NFS

[dev-dependencies]
pcap-file = "2.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "rdpi"
required-features = ["pcap"]

[[bench]]
name = "bench_detect"
harness = false
